# steer_bot

./: README.md
steer_bot_control/config/: ctrl_ackermann_steering_controller.yaml
steer_bot_description/urdf/: steer_bot.urdf.xacro
steer_bot_gazebo/: CMakeLists.txt
steer_bot_gazebo/launch/: steer_bot_sim.launch
steer_bot_gazebo/src/: camera.py  chronometer.py
steer_bot_spawn/: new_world.world
steer_bot_viz/launch/: view_steer_bot_robot.launch
steer_bot_viz/rviz/: steer_bot_robot.rviz
track/: CMakeLists.txt  package.xml
track_gazebo/: CMakeLists.txt  package.xml
track_gazebo/msg/: Cone.msg  Point_array.msg
track_gazebo/src/: rviz_track.py  track_generator.py
